--- a/index.html
+++ b/index.html
@@ -349,7 +349,6 @@
             type="text"
             placeholder="Enter Your Fullname"
             class="input_box"
-            required
           />
 
           <label for="email"><b>Email</b></label>
@@ -358,7 +357,6 @@
             type="email"
             placeholder="Enter Your Email"
             class="input_box"
-            required
           />
 
           <label for="password"><b>Password</b></label>
@@ -367,7 +365,6 @@
             type="password"
             placeholder="Enter Password"
             class="input_box"
-            required
           />
 
           <label for="address"><b>Address</b></label>
@@ -376,27 +373,14 @@
             type="text"
             placeholder="Enter Your Address"
             class="input_box"
-            required
           />
 
           <!-- poi stand for proof of identity-->
           <label for="poi"><b>Proof of Identity: </b></label>
-          <input
-            type="file"
-            id="poi"
-            class="input_box"
-            accept="image/*"
-            required
-          />
+          <input type="file" id="poi" class="input_box" accept="image/*" />
 
           <label for="poa"><b>Proof of Address: </b></label>
-          <input
-            type="file"
-            id="poa"
-            class="input_box"
-            accept="image/*"
-            required
-          />
+          <input type="file" id="poa" class="input_box" accept="image/*" />
         </div>
 
         <div
