--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         onsubmit="return false"
       >
         <div class="container">
-          <label for="login_email"><b>Username</b></label>
+          <label for="login_email"><b>Email</b></label>
           <input
             id="login_email"
             type="text"
