--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
       </div>
     </div>
 
+    <!-- Fullpage div to fullscreen image-->
     <div
       id="fullpage"
       onclick="this.style.display='none'; html.style.overflowY='scroll'"
