--- a/index.html
+++ b/index.html
@@ -82,16 +82,12 @@
       <div class="about-us">
         <h1 style="font-size: 2.5vw; font-weight: bold">About Us</h1>
         <div class="about-us-para">
-          <p style="font-size: 1vw">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus
-            mattis rhoncus urna neque viverra. Suspendisse in est ante in. Vel
-            orci porta non pulvinar neque laoreet. Aenean pharetra magna ac
-            placerat vestibulum lectus. Lectus sit amet est placerat in egestas
-            erat imperdiet sed. Dolor sit amet consectetur adipiscing. Ut
-            porttitor leo a diam sollicitudin. Augue interdum velit euismod in
-            pellentesque massa placerat. Aliquam ut porttitor leo a diam
-            sollicitudin.
+          <p style="font-size: 1.2vw">
+            At Club Maunga, we lend out the highest quality skis and three
+            chalets that vary in sizes that can hold from 6 to 40 people for
+            club members with amenities. With Maunga Mountain giving 550
+            hectares of skiing/snowboarding area and the longest
+            ski/snowboarding season in New Zealand.
           </p>
         </div>
       </div>
